--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Students</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="newStudentBtnText">+</string>
 </resources>
